// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Video authenticate 1`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video authenticate 2`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video authenticate 3`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video authenticate 4`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video authenticate 5`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video authenticate 6`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video autoPlay 1`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    autoPlay={true}
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video autoPlay 2`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video autoPlay 3`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video autoPlay 4`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    autoPlay={true}
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video className 1`] = `
<Span
  className="uu5-bricks-video my-classname"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video my-classname"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video controlled 1`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video controlled 2`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video controlled 3`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video controlled 4`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video default props 1`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video disableControls 1`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={false}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video disableControls 2`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video disableControls 3`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video disableControls 4`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={false}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video disabled 1`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={true}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    autoPlay={false}
    className="uu5-bricks-video uu5-common-disabled"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video disabled 2`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video disabled 3`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video disabled 4`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={true}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    autoPlay={false}
    className="uu5-bricks-video uu5-common-disabled"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video docKit examples UU5.Bricks.Video should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <Header
    className={null}
    colorSchema={null}
    content="autoplay"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID02"
    ignoreInnerHTML={false}
    key="uuID02"
    level={2}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
  <Video
    authenticate={false}
    autoPlay={true}
    className={null}
    controlled={true}
    disableControls={false}
    disabled={false}
    hidden={false}
    id="uuID03"
    key="uuID03"
    loop={false}
    mainAttrs={null}
    muted={false}
    name={null}
    nestingLevel={null}
    noIndex={false}
    poster=""
    preload="auto"
    pureRender={false}
    ref_={null}
    selected={false}
    src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    style={null}
    tooltip={null}
    type="mp4"
  />
  <Header
    className={null}
    colorSchema={null}
    content="disableControls"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID04"
    ignoreInnerHTML={false}
    key="uuID04"
    level={2}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
  <Video
    authenticate={false}
    autoPlay={true}
    className={null}
    controlled={true}
    disableControls={true}
    disabled={false}
    hidden={false}
    id="uuID05"
    key="uuID05"
    loop={false}
    mainAttrs={null}
    muted={true}
    name={null}
    nestingLevel={null}
    noIndex={false}
    poster=""
    preload="auto"
    pureRender={false}
    ref_={null}
    selected={false}
    src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    style={null}
    tooltip={null}
    type={null}
  />
  <Header
    className={null}
    colorSchema={null}
    content="loop"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID06"
    ignoreInnerHTML={false}
    key="uuID06"
    level={2}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
  <Video
    authenticate={false}
    autoPlay={false}
    className={null}
    controlled={true}
    disableControls={false}
    disabled={false}
    hidden={false}
    id="uuID07"
    key="uuID07"
    loop={true}
    mainAttrs={null}
    muted={false}
    name={null}
    nestingLevel={null}
    noIndex={false}
    poster=""
    preload="auto"
    pureRender={false}
    ref_={null}
    selected={false}
    src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    style={null}
    tooltip={null}
    type={null}
  />
  <Header
    className={null}
    colorSchema={null}
    content="poster"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID08"
    ignoreInnerHTML={false}
    key="uuID08"
    level={2}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
  <Video
    authenticate={false}
    autoPlay={false}
    className={null}
    controlled={true}
    disableControls={false}
    disabled={false}
    hidden={false}
    id="uuID09"
    key="uuID09"
    loop={false}
    mainAttrs={null}
    muted={false}
    name={null}
    nestingLevel={null}
    noIndex={false}
    poster="https://images.pexels.com/photos/220067/pexels-photo-220067.jpeg?w=200&h=250"
    preload="auto"
    pureRender={false}
    ref_={null}
    selected={false}
    src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    style={null}
    tooltip={null}
    type={null}
  />
  <Header
    className={null}
    colorSchema={null}
    content="preload"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID010"
    ignoreInnerHTML={false}
    key="uuID010"
    level={2}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
  <Video
    authenticate={false}
    autoPlay={false}
    className={null}
    controlled={true}
    disableControls={false}
    disabled={false}
    hidden={false}
    id="uuID011"
    key="uuID011"
    loop={false}
    mainAttrs={null}
    muted={false}
    name={null}
    nestingLevel={null}
    noIndex={false}
    poster=""
    preload="none"
    pureRender={false}
    ref_={null}
    selected={false}
    src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    style={null}
    tooltip={null}
    type={null}
  />
  <Header
    className={null}
    colorSchema={null}
    content="muted"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID012"
    ignoreInnerHTML={false}
    key="uuID012"
    level={2}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
  <Video
    authenticate={false}
    autoPlay={false}
    className={null}
    controlled={true}
    disableControls={false}
    disabled={false}
    hidden={false}
    id="uuID013"
    key="uuID013"
    loop={false}
    mainAttrs={null}
    muted={true}
    name={null}
    nestingLevel={null}
    noIndex={false}
    poster=""
    preload="auto"
    pureRender={false}
    ref_={null}
    selected={false}
    src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    style={null}
    tooltip={null}
    type={null}
  />
</div>
`;

exports[`UU5.Bricks.Video hidden 1`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={true}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video uu5-common-hidden"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video hidden 2`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video hidden 3`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video hidden 4`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={true}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video uu5-common-hidden"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video id 1`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="myId-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="myId"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video loop 1`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    loop={true}
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video loop 2`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video loop 3`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video loop 4`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    loop={true}
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video mainAttrs 1`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video muted 1`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    muted={true}
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video muted 2`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video muted 3`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video muted 4`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    muted={true}
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video name 1`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name="myName-inner"
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    name="myName"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video nestingLevel 1`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="spa"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video nestingLevel 2`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="container"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video nestingLevel 3`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="container"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video nestingLevel 4`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="page"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video nestingLevel 5`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="page"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video nestingLevel 6`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video nestingLevel 7`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video nestingLevel 8`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBox"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video nestingLevel 9`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBox"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video nestingLevel 10`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="boxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video nestingLevel 11`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="boxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video nestingLevel 12`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="box"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video nestingLevel 13`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="box"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video nestingLevel 14`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="smallBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video nestingLevel 15`] = `""`;

exports[`UU5.Bricks.Video nestingLevel 16`] = `""`;

exports[`UU5.Bricks.Video nestingLevel 17`] = `""`;

exports[`UU5.Bricks.Video nestingLevel 18`] = `""`;

exports[`UU5.Bricks.Video nestingLevel 19`] = `""`;

exports[`UU5.Bricks.Video nestingLevel 20`] = `""`;

exports[`UU5.Bricks.Video noIndex 1`] = `
<Span
  className="uu5-bricks-video uu5-noindex"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video uu5-noindex"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video noIndex 2`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video noIndex 3`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video noIndex 4`] = `
<Span
  className="uu5-bricks-video uu5-noindex"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video uu5-noindex"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video poster 1`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    poster="https://images.pexels.com/photos/220067/pexels-photo-220067.jpeg?w=200&h=250"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video preload 1`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video preload 2`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    preload="metadata"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video preload 3`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    preload="metadata"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video preload 4`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    preload="none"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video preload 5`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    preload="none"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video preload 6`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    preload="metadata"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video pureRender 1`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={true}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video pureRender 2`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video pureRender 3`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video pureRender 4`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={true}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video selected 1`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={true}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video uu5-common-selected"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video selected 2`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video selected 3`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video selected 4`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={true}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video uu5-common-selected"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video src 1`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video style 1`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={
      Object {
        "borderRadius": "2px",
        "padding": "8px",
      }
    }
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video style 2`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={
      Object {
        "backgroundColor": "red",
        "color": "blue",
      }
    }
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video style 3`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={
      Object {
        "backgroundColor": "red",
        "color": "blue",
      }
    }
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video style 4`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={
      Object {
        "borderRadius": "2px",
        "padding": "8px",
      }
    }
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video tooltip 1`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "title": "My Tooltip",
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip="My Tooltip"
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title="My Tooltip"
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video type 1`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="mp4"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video type 2`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="webm"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video type 3`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="webm"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video type 4`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="ogg"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video type 5`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="ogg"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;

exports[`UU5.Bricks.Video type 6`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <React.Suspense
    fallback=""
  >
    <React.Lazy
      authenticate={false}
      mainAttrs={
        Object {
          "className": "uu5-bricks-video",
          "controls": true,
          "id": "uuID",
          "src": "http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4",
          "style": Object {},
          "title": null,
          "type": "m3u8",
        }
      }
    />
  </React.Suspense>
</Span>
`;

exports[`UU5.Bricks.Video type 7`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <React.Suspense
    fallback=""
  >
    <React.Lazy
      authenticate={false}
      mainAttrs={
        Object {
          "className": "uu5-bricks-video",
          "controls": true,
          "id": "uuID",
          "src": "http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4",
          "style": Object {},
          "title": null,
          "type": "m3u8",
        }
      }
    />
  </React.Suspense>
</Span>
`;

exports[`UU5.Bricks.Video type 8`] = `
<Span
  className="uu5-bricks-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <video
    className="uu5-bricks-video"
    controls={true}
    id="uuID"
    style={Object {}}
    title={null}
    type="ogg"
  >
    <source
      src="http://www.sample-videos.com/video/mp4/240/big_buck_bunny_240p_5mb.mp4"
    />
  </video>
</Span>
`;
